[gd_scene load_steps=3 format=3 uid="uid://d2j8y1b0my6yr"]

[ext_resource type="Script" path="res://TopicRow.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2_icon"]

[node name="TopicRow" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_script")

[node name="HighlightRect" type="ReferenceRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
border_color = Color(0.2, 0.6, 1, 1)
border_width = 2.0
editor_only = false
visible = false

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="TopBar"]
layout_mode = 2
texture = ExtResource("2_icon")
expand_mode = 3
stretch_mode = 5

[node name="NameLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Topic Name"

[node name="PathLabel" type="Label" parent="TopBar"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
size_flags_horizontal = 3
text = "NT:/path/to/topic"
clip_text = true

[node name="ValueLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "123.456"

[node name="CloseButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "X"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="ChildrenContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IndentSpacer" type="Control" parent="MarginContainer/ChildrenContainer"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[connection signal="pressed" from="TopBar/CloseButton" to="." method="_on_close_button_pressed"]
